[tool.poetry]
name = "hubsim"
version = "0.1.0"
description = "Discrete-event simulation application proof-of-concept for evaluating and optimizing drone delivery operations"
authors = ["Connor Rubin"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.1.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
isort = "^5.10.1"
simpy = "4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
