[tool.poetry]
name = "hubsim"
version = "0.1.0"
description = "Discrete-event simulation application proof-of-concept for evaluating and optimizing drone delivery operations"
authors = ["Connor Rubin"]

[tool.poetry.dependencies]
python = "^3.10"
simpy = "4.0.1"
lea = "3.4.3"
plotly = "^5.13.0"
pandas = "^1.5.3"
rich = "^13.3.1"
streamlit = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^1.0.1"
pre-commit = "^3.0.2"
black = "^23.1.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py310"]
